# ReflectRAG

./: README.md  environment.yml  pyproject.toml
baselines/react_gpt/: run_react.py
baselines/selfrag_gpt/: run_selfrag.py
configs/: README.md
configs/datasets/: marco.yaml  nq.yaml  tqa.yaml
scripts/: run_ablation.py  run_pipeline.py
source/MARCO/: 10-reflect-batched.py  10-reflect-iterative.py  11-generate-final-no-filter.py  11-generate-final.py  2-gptrerank.py  3-generate.py  4-generate-plan-new.py  5-evaluation.py  7-prepare_reflection_data.py  9-new-GRPO.py
source/shared/: run_iterative_wrapper.py  telemetry_lite.py
src/reflectrag/: __init__.py
src/reflectrag/common/: __init__.py  io_manifest.py  json_utils.py  logging_utils.py  metrics.py  openai_compat.py  paths.py  pipeline_registry.py  run_profiles.py  runtime.py  secrets.py
src/reflectrag/pipelines/: __init__.py  iterative_reflection_runtime.py  runner.py
